@@ -4,10 +4,8 @@
     <title>The gnu.bytecode package</title>
   </head>
 
-  <body>
-    <h1>The gnu.bytecode package</h1>
-<p>
-The <code>gnu.bytecode</code> package contains classes to generate, read,
+  <body><p>
+Contains classes to generate, read,
 write, and print Java bytecode (<code>.class</code>) files.
 <p>
 It is used by
@@ -106,12 +104,5 @@ of the rest of Kawa.
 <h2>Bugs and patches</h2>
 Send them to <a href="mailto:per@bothner.com">per@bothner.com</a>,
 or to the <a href="mailto:kawa@sourceware.cygnus.com">Kawa mailing list</a>.
-
-    <hr>
-    <address><a href="mailto:per@bothner.com">Per Bothner</a></address>
-<!-- Created: Wed Mar  4 14:59:52 PST 1998 -->
-<!-- hhmts start -->
-Last modified: Thu Nov 18 15:50:22 PST 1999
-<!-- hhmts end -->
-  </body>
+</body>
 </html>
