@@ -5,9 +5,7 @@
   </head>
 
   <body>
-    <h1>The gnu.expr Package</h1>
-
-The <code>gnu.expr</code> supports <code>Expression</code>,
+Supports <code>Expression</code>,
 and various related classes need to compile programming languages.
 
 <p>
@@ -25,12 +23,5 @@ See the file <a href="http:COPYING">COPYING</a>.
 <h2>Bugs and patches</h2>
 Send them to <a href="mailto:per@bothner.com">per@bothner.com</a>,
 or to the <a href="mailto:kawa@sourceware.cygnus.com">Kawa mailing list</a>.
-
-    <hr>
-    <address><a href="mailto:per@bothner.com">Per Bothner</a></address>
-<!-- Created: Wed Jul 22 21:59:06 PDT 1998 -->
-<!-- hhmts start -->
-Last modified: Thu Nov 18 15:48:28 PST 1999
-<!-- hhmts end -->
   </body>
 </html>
