@@ -3,15 +3,12 @@
   <head>
     <title>The gnu.math Package</title>
   </head>
-
-  <body>
-    <h1>The gnu.math Package</h1>
-<p>
-The <code>gnu.math</code> package currently supports various numeric
+<body><p>
+Supports various numeric
 types, including complex numbers, efficient bignums, exact rational
-numbers, units, and more.
+numbers, units.
 <p>
-It is used by <a href="http:../kawa/">Kawa</a>
+This package is used by <a href="http:../kawa/">Kawa</a>
 to provide the full Scheme "numeric tower".
 <p>
 Javadoc generated
@@ -34,11 +31,5 @@ of the rest of Kawa.
 <h2>Bugs and patches</h2>
 Send them to <a href="mailto:per@bothner.com">per@bothner.com</a>,
 or to the <a href="mailto:kawa@sourceware.cygnus.com">Kawa mailing list</a>.
-    <hr>
-    <address><a href="mailto:per@bothner.com">Per Bothner</a></address>
-<!-- Created: Tue Mar 10 10:12:37 PST 1998 -->
-<!-- hhmts start -->
-Last modified: Thu Nov 18 15:46:29 PST 1999
-<!-- hhmts end -->
   </body>
 </html>
