@@ -1,3 +1,8 @@
+2000-02-27  Per Bothner  <per@bothner.com>
+
+	Various tweaks for better javadoc processing.
+	* overview.html:  Renamed to package.html.
+
 2000-02-25  Daniel Bonniot  <d.bonniot@mail.dotcom.fr>
 
 	* ClassType.java (getInterfaces):  Fix thinko.
